--- a/assets/custom.css
+++ b/assets/custom.css
@@ -8,9 +8,63 @@ body{
 }
 
 .head-banner {
-    background: rgb(2,21,70);
+    background: #0A1E3C;
     color: white;
-    padding: 12px;
-    padding-left: 48px;
+    width: 100%;
+    height: 100%;
+    z-index : 1;
+
+    
 }
 
+.navbar {
+    padding-top: 0;
+    padding-bottom: 0;
+    height:4rem;
+    vertical-align: center;
+    width:100%;
+    top:0;
+    left:0;
+}
+
+.sidebar-style {
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    bottom: 0px;
+    width: 17rem;
+    height: 100%;
+    overflow-x: hidden;
+    transition: all 0.2s;
+    padding: 4rem 1rem;
+    background-color: #0A1E3C;
+}
+
+.sidebar_hiden  {
+    position: fixed;
+    top: 65px;
+    left: -17rem;
+    bottom: 0px;
+    width: 17rem;
+    height: 100%;
+    overflow-x: hidden;
+    transition: all 0.2s;
+    padding: 0rem 0rem;
+    background-color: #0A1E3C;
+}
+
+.content_style {
+    transition: margin-left .3s;
+    margin-left: 17rem;
+    margin-right: 2rem;
+    padding: 2rem 1rem;
+    background-color: #f8f9fa;
+}
+
+.content_style_1 {
+    transition: margin-left .3s;
+    margin-left: 2rem;
+    margin-right: 2rem;
+    padding: 2rem 1rem;
+    background-color: #f8f9fa;
+}
